# cpp-hft-straddle

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  build.sh
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  security.yml
benchmarks/: bench_latency.cpp  bench_market_data.cpp  bench_strategy.cpp
config/: system_config.json
include/: data_ingestion.h  hft_straddle_system.h  market_data.h  straddle_strategy.h  tech_stock_selector.h
src/: main.cpp
tests/: test_data_ingestion.cpp  test_market_data.cpp  test_strategy.cpp
